--- a/src/main/java/net/codjo/tools/farow/ReleaseForm.form
+++ b/src/main/java/net/codjo/tools/farow/ReleaseForm.form
@@ -3,12 +3,12 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="10">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="827" height="689"/>
+      <xy x="20" y="20" width="944" height="689"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="8cafe" layout-manager="GridLayoutManager" row-count="1" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="8cafe" layout-manager="GridLayoutManager" row-count="1" column-count="10" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -26,7 +26,7 @@
           </hspacer>
           <component id="62841" class="javax.swing.JButton" binding="cancelButton">
             <constraints>
-              <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <borderPainted value="false"/>
@@ -49,17 +49,17 @@
               <text value="&amp;Stabiliser"/>
             </properties>
           </component>
-          <component id="3c7ef" class="javax.swing.JButton" binding="finalizeButton">
+          <component id="3c7ef" class="javax.swing.JButton" binding="artifactManagerUpdateButton">
             <constraints>
               <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;Finaliser"/>
+              <text value="&amp;Artifact manager update"/>
             </properties>
           </component>
           <component id="b6e64" class="javax.swing.JButton" binding="sendMailButton">
             <constraints>
-              <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <borderPainted value="false"/>
@@ -96,7 +96,7 @@
             </constraints>
             <properties>
               <horizontalAlignment value="2"/>
-              <text value="Publish on &amp;Github"/>
+              <text value="&amp;Github publish"/>
             </properties>
           </component>
           <component id="d69c2" class="javax.swing.JButton" binding="deleteRepoButton">
@@ -106,6 +106,14 @@
             <properties>
               <horizontalAlignment value="2"/>
               <text value="Delete repos"/>
+            </properties>
+          </component>
+          <component id="fec39" class="javax.swing.JButton" binding="confluenceUpdateButton">
+            <constraints>
+              <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="&amp;Confluence update"/>
             </properties>
           </component>
         </children>
